crates/kply-core/src/snapshots/kply_core__tests__app_graph_json_contract.snap
---
source: crates/kply-core/src/lib.rs
expression: test_app_graph()
---
{
  "workload": {
    "namespace": "checkout",
    "kind": "Deployment",
    "name": "checkout-api"
  },
  "owned_pods": [
    {
      "namespace": "checkout",
      "name": "checkout-api-7d9f4d9d-a"
    },
    {
      "namespace": "checkout",
      "name": "checkout-api-7d9f4d9d-b"
    }
  ],
  "selecting_services": [
    {
      "namespace": "checkout",
      "name": "checkout-api"
    },
    {
      "namespace": "checkout",
      "name": "checkout-api-private"
    }
  ],
  "service_routes": [
    {
      "service": {
        "namespace": "checkout",
        "name": "checkout-api"
      },
      "route": {
        "namespace": "checkout",
        "kind": "Ingress",
        "name": "checkout"
      }
    },
    {
      "service": {
        "namespace": "checkout",
        "name": "checkout-api-private"
      },
      "route": {
        "namespace": "checkout",
        "kind": "HTTPRoute",
        "name": "checkout-api-private"
      }
    }
  ],
  "probe_facts": [
    {
      "container": {
        "workload": {
          "namespace": "checkout",
          "kind": "Deployment",
          "name": "checkout-api"
        },
        "name": "api"
      },
      "readiness_probe": true,
      "liveness_probe": true,
      "startup_probe": false
    },
    {
      "container": {
        "workload": {
          "namespace": "checkout",
          "kind": "Deployment",
          "name": "checkout-api"
        },
        "name": "worker"
      },
      "readiness_probe": false,
      "liveness_probe": true,
      "startup_probe": false
    }
  ],
  "image_facts": [
    {
      "container": {
        "workload": {
          "namespace": "checkout",
          "kind": "Deployment",
          "name": "checkout-api"
        },
        "name": "api"
      },
      "image": "registry.example.com/checkout/api:v2"
    },
    {
      "container": {
        "workload": {
          "namespace": "checkout",
          "kind": "Deployment",
          "name": "checkout-api"
        },
        "name": "worker"
      },
      "image": "registry.example.com/checkout/worker:v1"
    }
  ]
}
