crates/kply-core/src/snapshots/kply_core__tests__session_plan_json_contract.snap
---
source: crates/kply-core/src/lib.rs
assertion_line: 6882
expression: value
---
{
  "id": "session-123",
  "image": "registry.example.com/checkout/api:v2",
  "name": "checkout-test",
  "planned_annotations": [
    {
      "key": "kply.dev/route-strategy",
      "value": "header"
    },
    {
      "key": "kply.dev/workload",
      "value": "checkout/Deployment/checkout-api"
    }
  ],
  "planned_checks": [
    {
      "name": "route_ready",
      "target": "header"
    },
    {
      "name": "workload_ready",
      "target": "checkout/Deployment/checkout-api"
    }
  ],
  "planned_cleanup_steps": [
    {
      "action": "delete_workload",
      "target": "checkout/Deployment/session-123-workload"
    },
    {
      "action": "delete_service",
      "target": "checkout/Service/session-123-service"
    }
  ],
  "planned_labels": [
    {
      "key": "kply.dev/managed-by",
      "value": "kply"
    },
    {
      "key": "kply.dev/session-id",
      "value": "session-123"
    }
  ],
  "planned_resources": [
    {
      "kind": "Deployment",
      "name": "session-123-workload",
      "namespace": "checkout"
    },
    {
      "kind": "Service",
      "name": "session-123-service",
      "namespace": "checkout"
    }
  ],
  "policy": {
    "allowed_operations": [
      "inspect",
      "plan",
      "prepare",
      "route",
      "verify",
      "cleanup"
    ]
  },
  "required_permissions": [
    {
      "api_group": "",
      "resource": "services",
      "verbs": [
        "create",
        "delete",
        "get"
      ]
    },
    {
      "api_group": "apps",
      "resource": "deployments",
      "verbs": [
        "create",
        "delete",
        "get",
        "patch"
      ]
    }
  ],
  "route_selector": {
    "kind": "header",
    "name": "x-kply-session",
    "value": "session-123"
  },
  "status": "planned",
  "ttl": null,
  "unsupported_feature_warnings": [
    {
      "feature": "preview_routing",
      "reason": "route_strategy_preview_not_implemented"
    }
  ],
  "workload": {
    "kind": "Deployment",
    "name": "checkout-api",
    "namespace": "checkout"
  }
}
