crates/kply-core/src/snapshots/kply_core__tests__session_report_json_contract.snap
---
source: crates/kply-core/src/lib.rs
expression: value
---
{
  "app_graph_summary": {
    "owned_pod_count": 2,
    "selecting_services": [
      {
        "name": "checkout-api",
        "namespace": "checkout"
      },
      {
        "name": "checkout-api-private",
        "namespace": "checkout"
      }
    ],
    "service_routes": [
      {
        "route": {
          "kind": "Ingress",
          "name": "checkout",
          "namespace": "checkout"
        },
        "service": {
          "name": "checkout-api",
          "namespace": "checkout"
        }
      },
      {
        "route": {
          "kind": "HTTPRoute",
          "name": "checkout-api-private",
          "namespace": "checkout"
        },
        "service": {
          "name": "checkout-api-private",
          "namespace": "checkout"
        }
      }
    ],
    "warnings": [
      {
        "candidate_workloads": [
          {
            "kind": "Deployment",
            "name": "checkout-api",
            "namespace": "checkout"
          },
          {
            "kind": "Deployment",
            "name": "checkout-worker",
            "namespace": "checkout"
          }
        ],
        "kind": "ambiguous_service_selector",
        "service": {
          "name": "checkout-api",
          "namespace": "checkout"
        }
      },
      {
        "kind": "missing_route",
        "service": {
          "name": "checkout-api-private",
          "namespace": "checkout"
        }
      },
      {
        "container": {
          "name": "worker",
          "workload": {
            "kind": "Deployment",
            "name": "checkout-api",
            "namespace": "checkout"
          }
        },
        "kind": "missing_probes",
        "missing_probes": [
          "readiness",
          "startup"
        ]
      }
    ],
    "workload": {
      "kind": "Deployment",
      "name": "checkout-api",
      "namespace": "checkout"
    }
  },
  "created_resources": [
    {
      "kind": "Deployment",
      "name": "session-123-workload",
      "namespace": "checkout"
    },
    {
      "kind": "HTTPRoute",
      "name": "session-123-route",
      "namespace": "checkout"
    },
    {
      "kind": "Service",
      "name": "session-123-service",
      "namespace": "checkout"
    }
  ],
  "metadata": {
    "session_id": "session-123",
    "session_name": "checkout-test",
    "workload": {
      "kind": "Deployment",
      "name": "checkout-api",
      "namespace": "checkout"
    }
  },
  "plan": {
    "id": "session-123",
    "image": "registry.example.com/checkout/api:v2",
    "name": "checkout-test",
    "planned_annotations": [
      {
        "key": "kply.dev/route-strategy",
        "value": "header"
      }
    ],
    "planned_checks": [],
    "planned_cleanup_steps": [],
    "planned_labels": [],
    "planned_resources": [],
    "policy": {
      "allowed_operations": [
        "inspect",
        "plan",
        "prepare",
        "route",
        "verify",
        "cleanup"
      ]
    },
    "required_permissions": [],
    "risk_notes": [],
    "route_selector": {
      "kind": "header",
      "name": "x-kply-session",
      "value": "session-123"
    },
    "status": "planned",
    "ttl": null,
    "unsupported_feature_warnings": [],
    "workload": {
      "kind": "Deployment",
      "name": "checkout-api",
      "namespace": "checkout"
    }
  },
  "route_strategy": {
    "selector": {
      "kind": "header",
      "name": "x-kply-session",
      "value": "session-123"
    },
    "strategy": "header"
  },
  "status": "ready"
}
